--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "compression": "^1.6.2",
     "config-obfuscator": "^1.0.1",
     "cors": "^2.8.0",
+    "cruddy-express-api": "^1.0.0",
     "express": "^4.14.0",
     "express-validator": "^2.20.8",
     "lodash": "^4.15.0",
     "mongoose": "^4.6.0",
+    "promise-to-respond": "^1.0.0",
     "stateless-auth": "^1.0.7",
     "uuid": "^2.0.2",
     "winston": "^2.2.0"
